fix: featured media is now centered in article pages (visible when media width is less than column's)

--- a/style.css
+++ b/style.css
@@ -968,6 +968,10 @@ a.siddur i {
     }
 }
 
+.featured-media {
+    text-align: center;
+}
+
 .the-content {
     padding-top: 2em;
 }
